--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
 arrow==1.2.3
 astroid==2.15.7
+async-timeout==4.0.3
+attrs==23.1.0
 beautifulsoup4==4.12.2
 blinker==1.6.2
 bs4==0.0.1
@@ -10,6 +14,7 @@ dill==0.3.7
 Flask==2.3.3
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.1.1
+frozenlist==1.4.0
 html5validator==0.4.2
 idna==3.4
 iniconfig==2.0.0
@@ -19,6 +24,9 @@ Jinja2==3.1.2
 lazy-object-proxy==1.9.0
 MarkupSafe==2.1.3
 mccabe==0.7.0
+metaphor-python==0.1.16
+multidict==6.0.4
+openai==0.28.1
 packaging==23.1
 pip==23.2.1
 platformdirs==3.10.0
@@ -36,8 +44,10 @@ snowballstemmer==2.2.0
 soupsieve==2.5
 SQLAlchemy==2.0.21
 tomlkit==0.12.1
+tqdm==4.66.1
 typing_extensions==4.8.0
 urllib3==2.0.5
 Werkzeug==2.3.7
 wheel==0.41.2
 wrapt==1.15.0
+yarl==1.9.2
